# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  11 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Fixed repoman LICENSE
  check to accept || () conditions.

*portage-2.0.51_rc8 (10 Oct 2004): RC + Lock cleanup, Happy RC #4

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Added in close()
	calls to ensure that control-C gets intercepted by portage instead of the
	children. Added in a re-raise for the SysExit exception inside of the
	regen and metadata targets.
	
  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> cnf/make.conf*:
	benno@nietvergeten.nl's touchups to make.conf files.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> sandbox/*: Includes one
  of solar's patches to fix up potential holes in sandbox.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage_exec.py: Added
  a cleanup routine.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: A could cwd
  fixes and removed the compat-writing for digests.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> md5check/mirror: brought
  them more up to date for the digest changes.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Moved the imports
  around to ensure that portage.py gives output on failure instead of emerge
  just dying. Added '-1' as a short for oneshot. Added shorter messages for
  the titlebar. Fixed signal handling more -- Emerge sets up a handler that
  calls to portageexit() before quitting normally.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Changed around
  the tarvars to make them STAR friendly. Added ECONF_SOURCE as a way to move
  econf out of the source directory and into a new build directory -- it